samples/_failures_safe/1761622837_35e4ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c367557c.c: In function ‘main’:
./samples/SAFE/__tmp_c367557c.c:155:5: error: expected declaration or statement at end of input
  155 |     } else if (choice == 2) {
      |     ^
./samples/SAFE/__tmp_c367557c.c:155:5: error: expected declaration or statement at end of input
